--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "xstate": "^4.2.3"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.9",
-    "@types/react": "^16.7.7",
-    "jest": "^23.6.0",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-testing-library": "^5.3.0",
-    "ts-jest": "^23.10.4",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.8.19",
+    "jest": "^24.8.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "@testing-library/react": "^8.0.1",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.0.3",
-    "xstate": "^4.2.3"
+    "xstate": "^4.6.0"
   },
   "keywords": [
     "xstate",
