--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "playground": "parcel playground/index.html"
   },
   "peerDependencies": {
     "@xstate/react": "^0.8.1",
@@ -24,6 +25,7 @@
     "@types/jest": "^24.9.0",
     "@types/react": "^16.9.18",
     "jest": "^24.8.0",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "ts-jest": "^24.3.0",
